--- a/styles/main.css
+++ b/styles/main.css
@@ -1065,11 +1065,11 @@ footer img {
   margin-bottom: 30px;
 }
 
-.section {
+#card-producto .section {
   margin-bottom: 40px;
 }
 
-.section-title {
+#card-producto .section-title {
   font-weight: bold;
   line-height: normal;
   font-size: 12px;
