sigo con la practica de la clase 5

--- a/clase05/css/style.css
+++ b/clase05/css/style.css
@@ -1,9 +1,12 @@
 :root {
   --aqua: rgb(0, 255, 255);
   --blue: rgb(0, 0, 255);
+  --gray: rgb(192, 174, 174);
   --green: rgb(0, 128, 0);
   --green-light: rgb(91, 165, 42);
+  --green-lighter: rgb(81, 255, 0);
   --orange: rgb(255, 165, 0);
+  --orange2: rgb(255, 166, 0);
   --pink: rgb(225, 0, 255);
   --red: rgb(255, 0, 0);
   --red2: rgb(241, 29, 29);
@@ -11,6 +14,7 @@
   --violet: rgb(138, 43, 227);
   --violet2: rgb(127, 129, 255);
   --violet3:rgb(102, 15, 241);
+  --white: rgb(255, 255, 255);
   --yellow: rgb(255, 255, 0);  
 }
 
@@ -118,13 +122,13 @@
 #flex-basis-main .div6,
 #flex-basis-main .div8,
 #flex-basis-main .div10 {
-  background-color: rgb(81, 255, 0);
+  background-color: var(--green-lighter);
   flex-basis: 25%;
 }
 #flex-basis-main .div7,
 #flex-basis-main .div9,
 #flex-basis-main .div11  {
-  background-color: rgb(255, 166, 0);
+  background-color: var(--orange2);
   flex-basis: 25%;
 }
 
@@ -135,11 +139,67 @@
 
 /** CARD DE PELICULA  **/
 #card-pelicula {
-  background-color: aqua;
+  background-color: var(--gray);
 }
 #card-pelicula .card {
+  background-color: var(--white);
+  border-radius: 1rem;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
   width: 80%;
+  height: 424px;
   margin: 100px auto;
-  height: 600px;
-  background-color: white;
+  display: flex;
+}
+@media screen and (max-width: 678px) {
+  #card-pelicula .card  {
+    flex-direction: column;
+    height: 824px;
+  }
+}
+
+.card-image img {
+  width: 300px;
+  height: 424px;
+  border-radius: 1rem 0rem 0rem 1rem;
+  -webkit-border-radius: 1rem 0rem 0rem 1rem;
+  -moz-border-radius: 1rem 0rem 0rem 1rem;
+  -ms-border-radius: 1rem 0rem 0rem 1rem;
+  -o-border-radius: 1rem 0rem 0rem 1rem;  
+}
+@media screen and (max-width: 678px) {
+  .card-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .card-image img {
+    width: 240px;
+    height: 340px;
+    border-radius: 0.25rem;
+    -webkit-border-radius: 0.25rem;
+    -moz-border-radius: 0.25rem;
+    -ms-border-radius: 0.25rem;
+    -o-border-radius: 0.25rem;
+  }
+}
+.card-text {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.height1 {
+  flex-grow: 1;
+  padding: 0rem 0.75rem;
+}
+.height2 {
+  flex-grow: 2;
+  padding: 0rem 0.75rem;
+}
+.card-text h2 {
+  text-align: center;
+  padding: 0.75rem 0rem;
 }
