--- a/styles/index-clase1-2.css
+++ b/styles/index-clase1-2.css
@@ -10,6 +10,7 @@ main {
 a {
   color: var(--primary-color-dark);
   text-decoration: none;
+  font-weight: 600;
 }
 
 a:hover {
@@ -20,4 +21,11 @@ a:hover {
   -ms-border-radius: 0.50rem;
   -o-border-radius: 0.50rem;
   padding: 0.10rem 1.5rem;
+}
+
+#blog,
+#diario-personal,
+#receta,
+#playlist {
+  padding-bottom: 1rem;
 }
