--- a/styles/main.css
+++ b/styles/main.css
@@ -146,6 +146,44 @@ main {
   padding: 1rem;
 }
 
+#main-page .grid {
+  column-count: 6;
+  column-gap: 2.5rem;
+  max-width: 980px;
+  margin: auto;
+  width: 100%;
+}
+
+#main-page a {
+  font-weight: 800;
+  line-height: 1.8;
+  background-color: var(--green-light-fruit);
+  padding: 0.25rem 0.50rem;
+  border-radius: 7px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
+}
+
+@media(max-width: 800px) {
+  #main-page .grid {
+    column-count: 4;
+  }
+}
+
+@media(max-width: 600px) {
+  #main-page .grid {
+    column-count: 2;
+  }
+}
+
+@media(max-width: 400px) {
+  #main-page .grid {
+    column-count: 1;
+  }
+}
+
 /* Footer */
 footer p {
   text-align: center;
