sigo con las funciones

--- a/clase11/style.css
+++ b/clase11/style.css
@@ -54,7 +54,7 @@ footer a:hover {
 .main-clase11 input,
 .main-clase11 label {
   display: block;
-  padding-bottom: 0.25rem;
+  margin-bottom: 0.50rem;
 }
 .main-clase11 button {
   margin: 1rem 0rem;
