--- a/clase13/style.css
+++ b/clase13/style.css
@@ -35,15 +35,18 @@ footer a:hover {
 .main-clase13 h4 {
   padding: 1rem 0rem;
 }
-.main-clase13 ul {
+.main-clase13 ul,
+.main-clase13 ol {
   padding: 2rem 1.5rem;
 }
 
-.main-clase13 ul li {
+.main-clase13 ul li,
+.main-clase13 ol li  {
   padding-bottom: 1rem;
 }
 
-.main-clase13 ul li a {
+.main-clase13 ul li a,
+.main-clase13 ol li a {
   background-color: var(--yellow);
   color: var(--green);
   font-weight: 800;
