termino el trabajo practico final, mostrando la informacion desde la api y agregando un poco de css

--- a/proyecto_final/style.css
+++ b/proyecto_final/style.css
@@ -1,62 +1,62 @@
 /* Font */
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,700');
 
-/* Design */
+/* Reset */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --blue:  #44b3cb;
+  --dark: #272727;
+  --green:  #c1da43;
+  --green-dark:  #449694; 
+  --light: #ecf9ff;
+  --ligther: #fff;
 }
 
 html {
-  background-color: #ecf9ff;
+  background-color: var(--light);
 }
 
 body {
-  color: #272727;
+  color: var(--dark);
   font-family: 'Quicksand', serif;
   font-style: normal;
   font-weight: 400;
   letter-spacing: 0;
-  padding: 1rem;
 }
 
+/* HEADER */
+#header {
+  display:flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+/* MAIN */
 .main{
   max-width: 1200px;
   margin: 0 auto;
+  padding: 1.25rem;
 }
 
-h1 {
-    font-size: 24px;
-    font-weight: 400;
-    text-align: center;
+h2 {
+  font-size: 1.75rem;
+  font-weight: 600;
+  padding: 1.25rem 0rem;
+  text-align: center;
 }
 
-img {
-  height: auto;
-  max-width: 100%;
-  vertical-align: middle;
-}
-
-.btn {
-  color: #ffffff;
-  padding: 0.8rem;
-  font-size: 14px;
-  text-transform: uppercase;
-  border-radius: 4px;
-  font-weight: 400;
-  display: block;
-  width: 100%;
-  cursor: pointer;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  background: transparent;
-}
-
-.btn:hover {
-  background-color: rgba(255, 255, 255, 0.12);
-}
-
-.cards {
+/* CARDS */
+#cards {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
@@ -64,8 +64,15 @@ img {
   padding: 0;
 }
 
+@media screen and (max-width: 636px) {
+  #cards {
+    flex-direction: column;
+  }
+}
 .cards_item {
   display: flex;
+  align-content: center;
+  justify-content: center;
   padding: 1rem;
 }
 
@@ -81,22 +88,33 @@ img {
   }
 }
 
+
 .card {
-  background-color: white;
-  border-radius: 0.25rem;
+  background-color: var(--ligther);
+  border-radius: 2.50rem;
   box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  -webkit-border-radius: 2.50rem;
+  -moz-border-radius: 2.50rem;
+  -ms-border-radius: 2.50rem;
+  -o-border-radius: 2.50rem;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
 }
 
 .card_content {
-  padding: 1rem;
-  background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%);
+  padding: 0.25rem;
+  background: linear-gradient(to bottom left, var(--green) 40%, var(--blue) 80%, var(--green-dark) 100%);
 }
 
 .card_title {
-  color: #ffffff;
+  color: var(--ligther);
   font-size: 1.1rem;
   font-weight: 700;
   letter-spacing: 1px;
@@ -105,15 +123,28 @@ img {
 }
 
 .card_text {
-  color: #ffffff;
+  color: var(--ligther);
   font-size: 0.875rem;
   line-height: 1.5;
   margin-bottom: 1.25rem;    
   font-weight: 400;
-}
-.made_by{
-  font-weight: 400;
-  font-size: 13px;
-  margin-top: 35px;
   text-align: center;
+}
+
+/* FOOTER */
+
+footer {
+  background-color:  var(--green);
+  padding: 1.5rem 1rem;
+}
+
+.made_by p {  
+  font-weight: 400;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.made_by a {
+  text-decoration: none;
+  padding: 0rem 0.25rem;
 }
